--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </script>
 
 </head>
-<body style="background-image: url('files/bg3-plain.png');" align="center">
+<body style="background-image: url('files/bg2.png');" align="center">
 <center>
     <div id="container" width="75px">
         <header>
