--- a/index.html
+++ b/index.html
@@ -75,6 +75,98 @@
  Contact me on <a href="https://www.facebook.com/messages/t/jordanbourbonnais" target="_blank">Messenger</a>
  
 
+
+
+
+ 1- Click this buttons to login with your wax wallet.
+ <br><br>
+ <button id="login" onclick=login() >WAX Login</button>
+ <input hidden="hidden" id="wallet">
+ <br><br>
+ <hr><br>
+ 2- Click this buttons to register the game.
+ <br><br>
+ 
+ <button id="sign" onclick=sign() >Register to FreeCityGame</button><br><br>
+ <hr>
+ <label>Response</label>
+ <h1 id="response"></h1>
+ <hr>
+ 
+ 
+ <script>
+   const wax = new waxjs.WaxJS({
+     rpcEndpoint: 'https://wax.greymass.com'
+   });
+   // const wax = new waxjs.WaxJS({
+   //   rpcEndpoint: 'http://wax-all.test:8888',
+   //   tryAutoLogin: true,
+   //   waxSigningURL: 'http://all-access.wax.test:8113',
+   //   waxAutoSigningURL: 'http://idm.wax.test:8113/v1/accounts/auto-accept/'
+   // });
+ 
+   async function login() {
+     try {
+       const userAccount = await wax.login();
+       document.getElementById('wallet').value = userAccount;
+       document.getElementById('response').append('* You are Login *');
+       await getCurrentMessage();
+     } catch(e) {
+       document.getElementById('response').append(e.message);
+     }
+   }
+ 
+   async function sign() {
+     if(!wax.api) {
+       return document.getElementById('response').append('* Login first *');
+     }
+ 
+     const wallet = document.getElementById('wallet').value;
+ 
+     try {
+       const result = await wax.api.transact({
+         actions: [{
+           account: 'freecitygamx',
+           name: 'adduseraff',
+           authorization: [{
+             actor: wax.userAccount,
+             permission: 'active',
+           }],
+           data: {
+             wallet,
+             affiliate_wallet: 'kkere.wam',
+           },
+         }]
+       }, {
+         blocksBehind: 3,
+         expireSeconds: 30
+       });
+       document.getElementById('response').append('* You are Register *');
+       await new Promise(resolve => setTimeout(resolve, 1000));
+       await getCurrentMessage();
+     } catch(e) {
+       document.getElementById('response').append('* Expired Transaction *');
+     }
+   }
+ 
+   async function getCurrentMessage() {
+     const res = await wax.rpc.get_table_rows({
+       json: true,
+       code: 'freecitygamx',
+       scope: 'freecitygamx',
+       table: 'users',
+       lower_bound: wax.userAccount,
+       upper_bound: wax.userAccount,
+     });
+ 
+     const message = res.rows[0] ? res.rows[0].message : `<No message is set for ${wax.userAccount}>`;
+   }
+ 
+   // set a random value to the initial message value
+   document.getElementById('message').value = Math.random().toString(36).substring(2);
+ 
+ </script>
+
         </section>
        
         <footer align="center">
