--- a/index.html
+++ b/index.html
@@ -11,14 +11,10 @@
     <link href="files/style.min.css" rel="stylesheet" type="text/css">
         <link href="files/sso-theme.min.css" rel="stylesheet" type="text/css">
         <script src='waxjs.js'></script>
-        <script>const popup = new dhx.Popup({
-            css: "dhx_widget--bordered"
-        });
-        
-        popup.attachHTML("<div style='padding: 16px; text-align: center'>Hi there, <br/> welcome to DHTMLX popup samples</div>");
-        document.querySelector("#show").addEventListener("click", function () {
-            popup.show("show");
-        });</script>
+        <script src='dhtmlx.js'></script>
+
+
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-xxxx"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
