--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
  
  </script>
 <!-- auxiliary controls for interacting with the sample -->
-<link rel="stylesheet" href="https://snippet.dhtmlx.com/codebase/assets/css/auxiliary_controls.css">
+<link rel="stylesheet" href="codebase/assets/css/auxiliary_controls.css">
 <section class="dhx_sample-controls">
 	<button id="show" class="dhx_sample-btn dhx_sample-btn--flat">Show popup</button>
 </section>
