--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link href="files/style.min.css" rel="stylesheet" type="text/css">
         <link href="files/sso-theme.min.css" rel="stylesheet" type="text/css">
         <script src='waxjs.js'></script>
-        <script src='dhtmlx.js'></script>
+        <script type="text/javascript" src="files/codebase/suite.js?v=7.3.3"></script>
+		<link rel="stylesheet" href="files/codebase/suite.css?v=7.3.3">
+		<link rel="stylesheet" href="files/common/index.css?v=7.3.3">
 
 
 
@@ -170,8 +172,24 @@
    document.getElementById('message').value = Math.random().toString(36).substring(2);
  
  </script>
+
+<hr>
+
+
+<tr>
+	<td>Menu</td>
+</tr>
+<tr>
+	<td>Menu</td>
+</tr>
+<tr>
+	<td>
+		<button id="show">Claim RMX</button>
+	</td>
+</tr>
+
 <!-- auxiliary controls for interacting with the sample -->
-<link rel="stylesheet" href="codebase/assets/css/auxiliary_controls.css">
+<link rel="stylesheet" href="/codebase/assets/css/auxiliary_controls.css">
 <section class="dhx_sample-controls">
 	<button id="show" class="dhx_sample-btn dhx_sample-btn--flat">Show popup</button>
 </section>
