--- a/index.html
+++ b/index.html
@@ -214,6 +214,63 @@ dhxWindow.attach(list)
 dhxWindow.show();
 </script>
 
+<tr>
+    <td><script>
+        const dataset2 = [
+            { text: "1. dhtmlxCalendar" },
+            { text: "2. dhtmlxChart" },
+            { text: "3. dhtmlxColorPicker" },
+            { text: "4. dhtmlxCombo" },
+            { text: "5. dhtmlxContextMenu (new)" },
+            { text: "6. dhtmlxDataView" },
+            { text: "7. dhtmlxForm" },
+            { text: "8. dhtmlxGrid" },
+            { text: "9. dhtmlxLayout" },
+            { text: "10. dhtmlxList" },
+            { text: "11. dhtmlxMenu" },
+            { text: "12. dhtmlxMessage" },
+            { text: "13. dhtmlxPopup" },
+            { text: "14. dhtmlxRibbon" },
+            { text: "15. dhtmlxSidebar" },
+            { text: "16. dhtmlxSlider" },
+            { text: "17. dhtmlxTabbar" },
+            { text: "18. dhtmlxTimePicker" },
+            { text: "19. dhtmlxToolbar" },
+            { text: "20. dhtmlxTooltip" },
+            { text: "21. dhtmlxTree" },
+            { text: "22. dhtmlxWindow" }
+        ];Menu
+    </script></td>
+</tr>
+<tr>
+    <td><script>
+        const dataset = [
+            { text: "1. dhtmlxCalendar" },
+            { text: "2. dhtmlxChart" },
+            { text: "3. dhtmlxColorPicker" },
+            { text: "4. dhtmlxCombo" },
+            { text: "5. dhtmlxContextMenu (new)" },
+            { text: "6. dhtmlxDataView" },
+            { text: "7. dhtmlxForm" },
+            { text: "8. dhtmlxGrid" },
+            { text: "9. dhtmlxLayout" },
+            { text: "10. dhtmlxList" },
+            { text: "11. dhtmlxMenu" },
+            { text: "12. dhtmlxMessage" },
+            { text: "13. dhtmlxPopup" },
+            { text: "14. dhtmlxRibbon" },
+            { text: "15. dhtmlxSidebar" },
+            { text: "16. dhtmlxSlider" },
+            { text: "17. dhtmlxTabbar" },
+            { text: "18. dhtmlxTimePicker" },
+            { text: "19. dhtmlxToolbar" },
+            { text: "20. dhtmlxTooltip" },
+            { text: "21. dhtmlxTree" },
+            { text: "22. dhtmlxWindow" }
+        ];
+    </script></td>
+</tr>
+
 </section>
         </section>
        
