--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
  Contact me on <a href="https://www.facebook.com/messages/t/jordanbourbonnais" target="_blank">Messenger</a>
  
 
-
+<hr>
 
 
  1- Click this buttons to login with your wax wallet.
@@ -176,17 +176,35 @@
 <hr>
 
 
+<header class="dhx_sample-header">
+    <div class="dhx_sample-header__main">
+        <nav class="dhx_sample-header__breadcrumbs">
+            <ul class="dhx_sample-header-breadcrumbs">
+                        <li class="dhx_sample-header-breadcrumbs__item">
+                            <a href="../index.html" class="dhx_sample-header-breadcrumbs__link">FreeCityGame</a>
+                        </li>
+                    </ul>
+        </nav>
+        <h1 class="dhx_sample-header__title">
+            <div class="dhx_sample-header__content">
+            
+
 <tr>
-	<td>Menu</td>
+<td>Menu</td>
 </tr>
 <tr>
-	<td>Menu</td>
+<td>Menu</td>
 </tr>
 <tr>
-	<td>
-		<button id="show">Claim RMX</button>
-	</td>
+<td>
+<button id="show">Claim RMX</button>
+</td>
 </tr>
+
+            </div>
+        </h1>
+    </div>
+</header>
 
 <script>
     const popup = new dhx.Popup({
@@ -213,6 +231,8 @@ list.data.parse(dataset);
 dhxWindow.attach(list)
 dhxWindow.show();
 </script>
+<center><iframe src="/ranking.html" width="100%" height="5000">
+</iframe>
 
 <tr>
     <td><script>
@@ -270,6 +290,12 @@ dhxWindow.show();
         ];
     </script></td>
 </tr>
+
+
+
+
+
+</center>
 
 </section>
         </section>
