--- a/index.html
+++ b/index.html
@@ -192,13 +192,13 @@
 <tr>
 <td>Menu</td>
 </tr>
+
 <tr>
-<td><p id="show">Menu</p></td>
+<td id="show">Menu</td>
 </tr>
+
 <tr>
-<td>
-<button id="show">Claim RMX</button>
-</td>
+<td>Menu</td>
 </tr>
 
             </div>
