--- a/index.html
+++ b/index.html
@@ -192,13 +192,12 @@
 <tr>
 <td>Menu</td>
 </tr>
-
 <tr>
-<td id="show">Menu</td>
+<td><p id="show">Menu</p></td>
 </tr>
-
 <tr>
-<td>Menu</td>
+<td>
+</td>
 </tr>
 
             </div>
