--- a/index.html
+++ b/index.html
@@ -193,10 +193,11 @@
 <td>Menu</td>
 </tr>
 <tr>
-<td><p id="show">Menu</p></td>
+<td><a href="#" class="dhx_sample-header-breadcrumbs__link" >Menu</a></td>
 </tr>
 <tr>
 <td>
+<button id="show">Solo Game</button>
 </td>
 </tr>
 
