--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 </tr>
 <tr>
 <td>
-<button id="show">Solo Game</button>
+<button id="show">Solo Game</button> - <button id="show2">Multiplayer Game</button>
 </td>
 </tr>
 
@@ -231,7 +231,31 @@ list.data.parse(dataset);
 dhxWindow.attach(list)
 dhxWindow.show();
 </script>
+<script>
+    const popup = new dhx.Popup({
+css: "dhx_widget--bordered"
+});
 
+    popup.attachHTML("<div style='padding: 0px; text-align: center'> <iframe src='https://google.com' title='Claim RMX Token' height='600' width='325' ></iframe></div>");
+document.querySelector("#show2").addEventListener("click", function () {
+popup.show("show");
+    });
+
+    const dhxWindow = new dhx.Window({
+width: 440,
+height: 520,
+title: "Window"
+});
+
+const list = new dhx.List(null, {
+css: "dhx_widget--bordered"
+});
+
+list.data.parse(dataset);
+
+dhxWindow.attach(list)
+dhxWindow.show();
+</script>
 
 
 
