--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ css: "dhx_widget--bordered"
 list.data.parse(dataset);
 
 dhxWindow.attach(list)
-dhxWindow.show();
+dhxWindow.show2();
 </script>
 
 
