--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <header>
           <img src="files/wax.svg" alt="WAX" width="75px" height="75px">
           <br>
-<p>Waxio.io</p>
+<p>WaxRush.com</p>
 
         </header>
         <section id="main" align="center">
