--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
  1- Click this buttons to login with your wax wallet.
  <br><br>
  <button id="login" onclick=login() >WAX Login</button>
- <label>Wallet:</label><input id="wallet">
+ <label>Wallet:</label><input id="owner">
  <br><br>
  <hr><br>
  2- Click this buttons to register the game.
