--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
 <center>
     <div id="container" width="75px">
         <header>
-          <br>
 <p>WaxRush.com - Wax NFT Distributor</p>
-
         </header>
         <section id="main" align="center">
  
 Login First
  <br><br>
  <button id="login" onclick=login() >WAX Login</button>
- <label>Wallet:</label><input id="wax.userAccount">
- <br><br>{wax.userAccount}
+ <label>Wallet:</label><input id="wallet">
+ <br><br>
  <hr><br>
  2- Click this buttons to register the game.
  <br><br>
