--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
         </header>
         <section id="main" align="center">
  
-Login First
+          <h1 id="wallet"></h1>
  <br><br>
  <button id="login" onclick=login() >WAX Login</button>
- <label>Wallet:</label><input id="wallet">
+ <label>wallet:</label><input id="wallet">
  <br><br>
+
+
+
  <hr><br>
  2- Click this buttons to register the game.
  <br><br>
