--- a/index.html
+++ b/index.html
@@ -118,6 +118,8 @@
    // set a random value to the initial message value
    document.getElementById('message').value = Math.random().toString(36).substring(2);
  
+    // set a random value to the initial message value
+  document.getElementById('message').value = Math.random().toString(36).substring(2);
  </script>
 
 <hr><br><br>
