--- a/index.html
+++ b/index.html
@@ -38,7 +38,15 @@
           
           <p>Click the buttons</p>
 
-          <button id="login" onclick=login() >WAX Login</button><br><br>
+          
+          <tr>
+            <td><button id="login" onclick=login() >WAX Login</button></td>
+          </tr>
+          <tr>
+            <td><h3 id="current"></h3></td>
+          </tr>
+
+          <br><br>
           <hr>
           <label>updater:</label><input id="updater"><br><br>
           <label>message:</label><input id="message"><br><br>
