--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@
           
               const message = res.rows[0] ? res.rows[0].message : `<No message is set for ${wax.userAccount}>`;
               document.getElementById('current').textContent = message;
+
+              const message = res.rows[0] ? res.rows[0].message : `<No message is set for ${wax.userAccount}>`;
+              document.getElementById('current').textContent = message;
             }
           
             // set a random value to the initial message value
