--- a/index.html
+++ b/index.html
@@ -43,9 +43,11 @@
             <td><button id="login" onclick=login() >WAX Login</button></td>
           </tr>
           <tr>
-            <td><h3 id="current"></h3></td>
+            <td>xxxxxxxx</td>
           </tr>
 
+
+          <h3 id="current"></h3>
           <br><br>
           <hr>
           <label>updater:</label><input id="updater"><br><br>
