--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <td><button id="login" onclick=login() >WAX Login</button></td>
           </tr>
           <tr>
-            <td>xxxxxxxx</td>
+            <td id="current"></td>
           </tr>
 
 
