--- a/index.html
+++ b/index.html
@@ -34,16 +34,13 @@
 <p>WaxRush.com - Wax NFT Distributor</p>
         </header>
         <section id="main" align="center">
- 
-          
-          <p>Click the buttons</p>
+          <h3 id="current"></h3>
 
-          
           <tr>
             <td><button id="login" onclick=login() >WAX Login</button></td>
           </tr>
           <tr>
-            <td><p id="current"></p></td>
+            <td>xxxxxxxx</td>
           </tr>
 
 
