--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <h3 id="current"></h3>
 
           <tr>
-            <td><button id="login" onclick=login() >WAX Login</button></td>
+            <td><br><button id="login" onclick=login() >WAX Login</button></td>
           </tr>
           <tr>
             <td>xxxxxxxx</td>
