--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 <p>WaxRush.com - Wax NFT Distributor</p>
         </header>
         <section id="main" align="center">
-          <h3 id="current"></h3>
+          <h1 id="current"></h1>
 
           <tr>
-            <td><br><button id="login" onclick=login() >WAX Login</button></td>
+            <td><button id="login" onclick=login() >WAX Login</button></td>
           </tr>
           <tr>
             <td>xxxxxxxx</td>
