--- a/index.html
+++ b/index.html
@@ -34,15 +34,21 @@
 <p>WaxRush.com - Wax NFT Distributor</p>
         </header>
         <section id="main" align="center">
-          <h2 id="current"></h2>
+          
+
+          <div>
+          <tr>
+            <td>
+              <div>
+<button id="login" onclick=login() >WAX Login</button>
+              </div>
+            </td>
+          </tr>
 
           <tr>
-            <td><button id="login" onclick=login() >WAX Login</button></td>
+<div><td><h2 id="current"></h2></td></div>
           </tr>
-          <tr>
-            <td>xxxxxxxx</td>
-          </tr>
-
+</div>
 
           
           <br><br>
