--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>WaxRush.com - Wax NFT Distributor</p>
         </header>
         <section id="main" align="center">
-          
+          <h2 id="current"></h2>
 
           <div>
           <tr>
@@ -46,7 +46,7 @@
           </tr>
 
           <tr>
-<div><td><h2 id="current"></h2></td></div>
+<div><td></td></div>
           </tr>
 </div>
 
@@ -63,6 +63,8 @@
           <h2 id="response"></h2>
           
           <script>
+            const test = `Check out`;
+
             const wax = new waxjs.WaxJS({
               rpcEndpoint: 'https://wax.greymass.com'
             });
@@ -137,8 +139,8 @@
 
 
 
-
-
+<br>
+{test}
 
 
 
