--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="files/style.min.css" rel="stylesheet" type="text/css">
         <link href="files/sso-theme.min.css" rel="stylesheet" type="text/css">
         <script src='waxjs.js'></script>
+        <script src='files/script.js'></script>
         <script type="text/javascript" src="../../codebase/suite.js?v=7.3.3"></script>
 		<link rel="stylesheet" href="../../codebase/suite.css?v=7.3.3">
 		<link rel="stylesheet" href="../common/index.css?v=7.3.3">
@@ -63,8 +64,7 @@
           <h2 id="response"></h2>
           
           <script>
-            const test = `Check out`;
-
+            
             const wax = new waxjs.WaxJS({
               rpcEndpoint: 'https://wax.greymass.com'
             });
