--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
 
           <div>
           <tr>
-            <td>
-              <div>
-<button id="login" onclick=login() >WAX Login</button>
-              </div>
-            </td>
+            <td><button id="login" onclick=login() >WAX Login</button></td>
+            <td>xxxxxxxxxx</td>
+            <td>xxxxxxxxxx</td>
           </tr>
 
           <tr>
-<div><td></td></div>
+<td>xxxxxxxxxx</td>
+<td>xxxxxxxxxx</td>
+<td>xxxxxxxxxx</td>
           </tr>
 </div>
 
