--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
           <div>
           <tr>
-            <td><button id="login" onclick=login() >WAX Login</button></td>
-            <td>xxxxxxxxxx</td>
-            <td>xxxxxxxxxx</td>
+            <th><button id="login" onclick=login() >WAX Login</button></td>
+            <th>xxxxxxxxxx</th>
+            <th>xxxxxxxxxx</th>
           </tr>
 
           <tr>
