--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
           <div>
           <tr>
-            <th><button id="login" onclick=login() >WAX Login</button></td>
+            <th><button id="login" onclick=login() >WAX Login</button></th>
             <th>xxxxxxxxxx</th>
             <th>xxxxxxxxxx</th>
           </tr>
