--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section id="main" align="center">
           <h2 id="current"></h2>
 
-          <div>
+          <table>
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
             <th>xxxxxxxxxx</th>
@@ -54,7 +54,7 @@
             <td>xxxxxxxxxx</td>
             <td>xxxxxxxxxx</td>
                       </tr>
-</div>
+                    </table>
 
           
           <br><br>
