--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 <p>WaxRush.com - Wax NFT Distributor</p>
         </header>
         <section id="main" align="center">
-          <h2 id="current"></h2>
+          
 
           <table>
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
-            <th>xxxxxxxxxx</th>
-            <th>xxxxxxxxxx</th>
+            <th> xxxxxxxxxx</th>
+            <th> <h2 id="current"></h2></th>
           </tr>
 
           <tr>
