--- a/index.html
+++ b/index.html
@@ -42,14 +42,13 @@
             <th><button id="login" onclick=login() >WAX Login</button></th>
             <th><h2 id="current"></h2></th>
           </tr>
-
+<br>
           <tr>
 <td>xxxxxxxxxx</td>
-<td>xxxxxxxxxx</td>
+<td>yyyyyyyyyy</td>
           </tr>
           <tr>
-            <td>xxxxxxxxxx</td>
-            <td>xxxxxxxxxx</td>
+            <td>image here</td>
                       </tr>
                     </table>
 
