--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section id="main" align="center">
           
 
-          <table>
+          <table align="center">
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
             <th><h2 id="current"></h2></th>
