--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <section id="main" align="center">
           
 
-          <table align="center">
+          <table>
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
             <th><h2 id="current"></h2></th>
@@ -48,7 +48,7 @@
 <td>yyyyyyyyyy</td>
           </tr>
           <tr>
-            <td>image here</td>
+            <td align="center">image here</td>
                       </tr>
                     </table>
 
