--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         <section id="main" align="center">
           
 
+          <details id="details-panel1">
+            <summary>Starter (+15$/month) <img src="https://jordanbourbonnais.com/images/linux.png" alt="Linux" style="width:20px;height:20px;"></summary>
+            <p>Processor 1 vCore<br>
+Memory 2 Go<br>
+Storage 20 Go SSD SATA<br>
+Public bandwidth 100 Mbit/s</p>
+        </details>
+
+
           <table>
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
@@ -51,6 +60,7 @@
             <td align="center">image here</td>
                       </tr>
                     </table>
+
 
           
           <br><br>
