--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           
 
           <details id="details-panel1">
-            <summary>Wax Login <img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></summary>
+            <summary>WAX LOGIN <img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></summary>
 
             <p>
               <table>
@@ -55,7 +55,7 @@
           
 
 
-          <img src="files/wax.svg" alt="WAX Login" width="20px" height="20px">
+
 
           <br><br>
           <hr>
