--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 
           <details id="details-panel1">
             <summary>WAX LOGIN <img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></summary>
-
-            <p>
-              <table>
+            <p><br>
+              <table border="1">
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
             <th><h2 id="current"></h2></th>
