--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           
 
           <details id="details-panel1">
-            <summary>WAX LOGIN <img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></summary>
+            <summary>WAX LOGIN</summary>
             <p><br>
               <table border="1">
           <tr>
@@ -47,7 +47,7 @@
           </tr>
 
                     </table>
-                    <img src="files/wax.svg" alt="WAX Login" width="150px" height="65px">
+                    <img src="#" alt="WAX Login" width="150px" height="65px">
                     <br>
                     Buy random NFT for 1 WAX
                     <br>
@@ -134,7 +134,7 @@
 
             </p>
         </details>
-
+        <img src="files/wax.svg" alt="WAX Login" width="50px" height="50px">
 
           
 
@@ -148,8 +148,7 @@
 
 
 
-<br>
-{test}
+
 
 
 
