--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </tr>
 
                     </table>
-                    <img src="#" alt="WAX Login" width="150px" height="65px">
+                    <img src="files/aw.png" alt="NFT Distributor" width="210px" height="150px">
                     <br>
                     Buy random NFT for 1 WAX
                     <br>
@@ -134,7 +134,7 @@
 
             </p>
         </details>
-        <img src="files/wax.svg" alt="WAX Login" width="75px" height="75px">
+        <img src="files/wax.svg" alt="WAX Login" width="50px" height="50px">
 
           
 
@@ -156,9 +156,7 @@
 
 
 
-<hr><br><br>
 
-<img src="files/wax.svg" alt="WAX" width="75px" height="75px">
 
 <hr><br><br>
 
