--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
 
 
 
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-xxxx"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YJHTL314PP"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-xxxx');
+  gtag('config', 'G-YJHTL314PP');
 </script>
 
 </head>
