--- a/index.html
+++ b/index.html
@@ -40,18 +40,14 @@
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
             <p><br>
-              <table border="1">
-          <tr>
-            <th><button id="login" onclick=login() >WAX Login</button></th>
-            <th><h2 id="current"></h2></th>
-          </tr>
-
-                    </table>
+              <button id="login" onclick=login() >WAX Login</button>
+<br>
+                  <h2 id="current"></h2>
+                  <br>                  
                     <img src="files/aw.png" alt="NFT Distributor" width="210px" height="150px">
                     <br>
                     Buy random NFT for 1 WAX
                     <br>
-                    <hr>
                     <label>wallet:</label><input id="wallet"><br><br>
                     <button id="sign" onclick=sign() >Sign transaction</button><br><br>
                   
@@ -154,13 +150,16 @@
 
 
 
-<hr><br><br>
+<br><br>
 
 <header class="dhx_sample-header">
     <div class="dhx_sample-header__main">
         <nav class="dhx_sample-header__breadcrumbs">
             <ul class="dhx_sample-header-breadcrumbs">
                         <li class="dhx_sample-header-breadcrumbs__item">
+                            <a href="../index.html" class="dhx_sample-header-breadcrumbs__link">FreeCityGame</a>
+                            <a href="../index.html" class="dhx_sample-header-breadcrumbs__link">FreeCityGame</a>
+                            <a href="../index.html" class="dhx_sample-header-breadcrumbs__link">FreeCityGame</a>
                             <a href="../index.html" class="dhx_sample-header-breadcrumbs__link">FreeCityGame</a>
                         </li>
                     </ul>
