--- a/index.html
+++ b/index.html
@@ -41,10 +41,9 @@
             <summary>WAX LOGIN</summary>
             <p><br>
               <button id="login" onclick=login() >WAX Login</button>
-<br>
-                  <h2 id="current"></h2>
-                  <br>                  
-                    <img src="files/aw.png" alt="NFT Distributor" width="210px" height="150px">
+<br><br>
+                  <h2 id="current"></h2>                
+                    <img src="files/aw.png" alt="NFT Distributor" width="30%">
                     <br>
                     Buy random NFT for 1 WAX
                     <br>
