--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
             <p><br>
-              <table border="1">
-          <tr>
-            <th><button id="login" onclick=login() >WAX Login</button></th>
-            <th><h2 id="current"></h2></th>
-          </tr>
-
-                    </table>
-                    <img src="files/aw.png" alt="NFT Distributor" width="210px" height="150px">
+              <button id="login" onclick=login() >WAX Login</button>
+              <br><br>
+              <h2 id="current"></h2>
+                    <img src="files/aw.png" alt="NFT Distributor" width="35%">
                     <br>
                     Buy random NFT for 1 WAX
                     <br>
