--- a/index.html
+++ b/index.html
@@ -43,12 +43,13 @@
               <button id="login" onclick=login() >WAX Login</button>
               <br><br>
               <h2 id="current"></h2>
-                    <img src="files/aw.png" alt="NFT Distributor" width="35%">
+                    <img src="files/aw.png" alt="NFT Distributor" width="45%">
                     <br>
                     Buy random NFT for 1 WAX
                     <br>
                 
                     <button id="sign" onclick=sign() >Sign transaction</button><br><br>
+                    <label>Current Message</label><h3 id="current"></h3><br><br>
                     <hr>
                     <label>Transaction Results</label>
                     <h2 id="response"></h2>
