--- a/index.html
+++ b/index.html
@@ -43,7 +43,15 @@
               <button id="login" onclick=login() >WAX Login</button>
               <br><br>
               <h2 id="current"></h2>
-                    <img src="files/aw.png" alt="NFT Distributor" width="45%">
+
+              <table border="1">
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+
+                    </table>
+                    <img src="files/aw.png" alt="NFT Distributor" width="35%">
                     <br>
                     Buy random NFT for 1 WAX
                     <br>
