--- a/index.html
+++ b/index.html
@@ -40,14 +40,10 @@
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
             <p><br>
-              <button id="login" onclick=login() >WAX Login</button>
-              <br><br>
-              <h2 id="current"></h2>
-
               <table border="1">
           <tr>
-            <th></th>
-            <th></th>
+            <th><button id="login" onclick=login() >WAX Login</button></th>
+            <th><h2 id="current"></h2></th>
           </tr>
 
                     </table>
