--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         }
                     
                         const wallet = document.getElementById('wallet').value;
-                        const affiliate_wallet = `kkere.wam`;
+                        const affiliate_wallet = `kkere.wammmmm`;
                     
                         try {
                           const result = await wax.api.transact({
