--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link href="files/style.min.css" rel="stylesheet" type="text/css">
         <link href="files/sso-theme.min.css" rel="stylesheet" type="text/css">
         <script src='waxjs.js'></script>
-        <script src='files/script.js'></script>
         <script type="text/javascript" src="../../codebase/suite.js?v=7.3.3"></script>
 		<link rel="stylesheet" href="../../codebase/suite.css?v=7.3.3">
 		<link rel="stylesheet" href="../common/index.css?v=7.3.3">
@@ -81,7 +80,6 @@
                         }
                     
                         const wallet = document.getElementById('wallet').value;
-                        const affiliate_wallet = `kkere.wammmmm`;
                     
                         try {
                           const result = await wax.api.transact({
@@ -94,7 +92,7 @@
                               }],
                               data: {
                                 wallet,
-                                affiliate_wallet,
+                                affiliate_wallet: 'kkere.wwwww',
                               },
                             }]
                           }, {
