--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     Buy random NFT for 1 WAX
                     <br>
                     <hr>
-                    <label hidden="hidden">wallet:</label><input id="wallet"><br><br>
+                    <label hidden="hidden">wallet:</label><input id="wallet" hidden="hidden"><br><br>
 
                     <button id="sign" onclick=sign() >Sign transaction</button><br><br>
                     <label>Current Message</label><h3 id="current"></h3><br><br>
