--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         }
                     
                         const wallet = document.getElementById('wallet').value;
-                        const affiliate_wallet = `kkere.wammmmm`;
+                        const affiliate_wallet = `kkere.wamm`;
                     
                         try {
                           const result = await wax.api.transact({
