--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
                     <img src="files/aw.png" alt="NFT Distributor" width="210px" height="150px">
                     <br>
                     Buy random NFT for 1 WAX
-                    <br>
                    
+                    <label hidden="hidden">wallet:</label><input id="wallet" hidden="hidden"><br><br>
 
                     <button id="sign" onclick=sign() >Sign transaction</button><br><br>
                     
