--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           </tr>
 
                     </table>
-                    <img src="files/aw.png" alt="NFT Distributor" width="210px" height="150px">
+                    <img src="files/aw.png" alt="NFT Distributor" width="40%">
                     <br>
                     Buy random NFT for 1 WAX
                    
