--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
        upper_bound: 'waxioiopos1',
                         });
                     
-                        const message = res.rows[0] ? res.rows[0].message : `<img src="files/aw.png" alt="NFT Distributor" width="40%"> ${affiliate_wallet} ${wax.userAccount}`;
+                        const message = res.rows[0] ? res.rows[0].message : `<img src="files/aw.png" alt="NFT Distributor" width="40%"> ${wax.userAccount}`;
                         document.getElementById('current').textContent = message;
                       }
                     
