--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                       }
                     
                       function htmlspecialchars(text){
-    return jQuery('<div/>').text(text).html();
+    return jQuery('<img src="files/aw.png" alt="NFT Distributor" width="40%">').text(text).html();
 }
                       // set a random value to the initial message value
                       document.getElementById('message').value = Math.random().toString(36).substring(2);
