--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <center>
     <div id="container" width="75px">
         <header>
-<p>WaxRush.com - Wax NFT Distributor</p>
+<p>WaxRush.com - Wax NFT Distributorrrrrrrr</p>
         </header>
         <section id="main" align="center">
           
