--- a/index.html
+++ b/index.html
@@ -123,9 +123,9 @@
                         const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount}`;
                         document.getElementById('current').textContent = message;
                         document.getElementById('current').append('* test *');
-                        document.getElementById('current').append('* test *');
+                        document.getElementById('current').document.write('<img src="files\aw.png\">');
 
-                        document.write('<img src="files\aw.png\">');
+                        
 
                       }
                     
