--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                         const message = res.rows[0] ? res.rows[0].message : `${wax.userAccount}`;
                         document.getElementById('current').textContent = message;
                         
-                        document.getElementById('current').append('<br\>');
+                        document.getElementById('current').append('<img src="files\aw.png\\>');
                         document.getElementById('current').append('* test *');
                         
 
