--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           
 
           <details id="details-panel1">
-            <summary>WAX LOGIN</summary>
+            <summary>WAX LOGIN</summary><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px">
             <p><br>
               <table>
           <tr>
@@ -137,7 +137,7 @@
 
             </p>
         </details>
-        <img src="files/wax.svg" alt="WAX Login" width="50px" height="50px">
+        
 
           <script>document.write('<img src="/files/wax.svg" alt="" height="50" width="50">');</script>
 
