--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
           
 
           <details id="details-panel1">
-            <summary>WAX LOGIN</summary><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px">
+            <tr>
+              <th><summary>WAX LOGIN</summary></th>
+              <th><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></th>
+            </tr>
+
+            
             <p><br>
               <table>
           <tr>
