--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           
 
           <details id="details-panel1">
+            <table></table>
             <tr>
               <th><summary>WAX LOGIN</summary></th>
-            </tr>
-            <tr>
               <th><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></th>
             </tr>
-            
+            </table>
+
             <p><br>
               <table>
           <tr>
