--- a/index.html
+++ b/index.html
@@ -38,18 +38,12 @@
           
 
           <details id="details-panel1">
-            <table></table>
-            <tr>
-              <th><summary>WAX LOGIN</summary></th>
-              <th><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></th>
-            </tr>
-            </table>
-
+            <summary>WAX LOGIN</summary>
             <p><br>
               <table>
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
-            <th><h2 id="current"></h2></th>
+            <th><h2 id="current"></h2><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></th>
           </tr>
 
                     </table>
