--- a/index.html
+++ b/index.html
@@ -38,12 +38,19 @@
           
 
           <details id="details-panel1">
-            <summary>WAX LOGIN</summary>
-            <p><br>
+
+            
+
+            <br>
+
               <table>
+                <tr>
+                  <th><summary>WAX LOGIN</summary></th>
+                  <th><p></p><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></th>
+                </tr>
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
-            <th><h2 id="current"></h2><img src="files/wax.svg" alt="WAX Login" width="20px" height="20px"></th>
+            <th><h2 id="current"></h2></th>
           </tr>
 
                     </table>
