--- a/embed.html
+++ b/embed.html
@@ -38,8 +38,13 @@
           </p>
 </section>
         <br>
-        <textarea id="w3review" name="w3review" rows="4" cols="50"><iframe src='dhtmlx.html' title='' height='325' width='325' ></iframe>
+        <textarea id="w3review" name="w3review" rows="4" cols="50">
+          <iframe src='dhtmlx.html' title='' height='325' width='325' ></iframe>
         </textarea>
+
+        <code>
+          <iframe src='dhtmlx.html' title='' height='325' width='325' ></iframe>
+        </code>
           
           
 
