--- a/embed.html
+++ b/embed.html
@@ -38,7 +38,7 @@
           </p>
 </section>
         <br>
-        <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="4" cols="50"><iframe src='embed.html' title='' height='325' width='325' ></iframe></textarea>
+        <textarea style="color:rgb(0, 0, 0)" id="w3review" name="w3review" rows="3" cols="50"><iframe src='https://waxrush.com/?ref=xxxxx.wam' title='' height='325' width='325' ></iframe></textarea>
           
 
        
