--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         document.getElementById('current').textContent = message;
                         document.write('<img src="/files/wax.svg" alt="" height="50" width="50">');
                         document.getElementById('current').append('* test *');
-                        document.getElementById("image").src = "/files/wax.svg";
+                        document.getElementById("current").src = "/files/wax.svg";
                         
                         
                       }
