--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@ dhxWindow.show();
 
 
 
-</section>111
-        </section>222
+</section>
+        
        
         <footer align="center">
             <br><br>
