--- a/index_contract.html
+++ b/index_contract.html
@@ -149,4 +149,5 @@
         </footer>
     </div>
     </center>
+    <iframe src='https://waxrush.com/?ref=xxxxx.wam' title='' height='325' width='325' ></iframe>
 </body></html>
