--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <center>
     <div id="container" width="75px">
         <header>
-<p>WaxRush.com - Random WAX NFT Distributor</p>
+<p>Random WAX NFT Distributor</p>
         </header>
         
         <br><br><br>
