--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
 <p>Random WAX NFT Distributor</p>
         </header>
         
-        <br>
           <details id="details-panel1">
             <summary>WAX LOGIN</summary>
-            <section id="main" align="center">
-            <p><br>
+
+            <section id="main">
+            <p>
               
-              <table align="center">
+              <table>
           <tr>
             <th><button id="login" onclick=login() >WAX Login</button></th>
             <th><h2 id="current"></h2></th>
@@ -48,6 +48,9 @@
 
                     </table>
 </p>
+
+
+
                     <img src="files/aw.png" alt="NFT Distributor" width="40%">
                     <br>
                     Random NFT distributor (1 WAX)
